pick 0c96a3d79 Replace usage of SuperficialValidation with DaggerSuperficialValidation.
see: https://github.com/google/dagger/commit/0c96a3d79d1855ae60e2a8c7737aefbcf6b475b0
date: 7 Feb, 2022